Added animation for Kirby.

--- a/final-project-CatYuan.vcxproj
+++ b/final-project-CatYuan.vcxproj
@@ -186,9 +186,10 @@
   <ItemGroup>
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\ofApp.cpp" />
-    <ClCompile Include="src\SouthparkAnimation.cpp" />
     <ClCompile Include="src\BasicAnimation.cpp" />
     <ClCompile Include="src\Face.cpp" />
+    <ClCompile Include="src\KirbyAnimation.cpp" />
+    <ClCompile Include="src\SouthparkAnimation.cpp" />
     <ClCompile Include="..\..\..\addons\ofxOsc\src\ofxOscBundle.cpp" />
     <ClCompile Include="..\..\..\addons\ofxOsc\src\ofxOscMessage.cpp" />
     <ClCompile Include="..\..\..\addons\ofxOsc\src\ofxOscParameterSync.cpp" />
@@ -204,10 +205,11 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\ofApp.h" />
-    <ClInclude Include="src\SouthparkAnimation.h" />
     <ClInclude Include="src\Animation.h" />
     <ClInclude Include="src\BasicAnimation.h" />
     <ClInclude Include="src\Face.h" />
+    <ClInclude Include="src\KirbyAnimation.h" />
+    <ClInclude Include="src\SouthparkAnimation.h" />
     <ClInclude Include="..\..\..\addons\ofxOsc\src\ofxOsc.h" />
     <ClInclude Include="..\..\..\addons\ofxOsc\src\ofxOscArg.h" />
     <ClInclude Include="..\..\..\addons\ofxOsc\src\ofxOscBundle.h" />
